# gate-coach-bot

./: .env.example  .gitignore  Dockerfile  README.md  SESSION_STATE.md  pyproject.toml  render.yaml  run_bot.bat
.github/workflows/: keepalive.yml
alembic/: env.py
alembic/versions/: cad789423a98_initial_schema.py
app/: config.py  main.py
app/api/: health.py
app/bot/: app.py  callbacks.py  formatting.py  keyboards.py  middlewares.py  scheduler.py  users.py
app/bot/handlers/: dashboard.py  field.py  flag.py  start.py  text.py  today.py  track.py
app/db/: models.py  session.py
app/engines/: bookmarks.py  logs.py  meta.py  progress.py  tracker.py
app/scripts/: seed.py
content/: syllabus.yaml
docs/superpowers/specs/: 2026-06-15-gate-coach-design.md
tests/: conftest.py
tests/unit/: test_engines.py  test_seed.py
